--- a/views/test.html
+++ b/views/test.html
@@ -1,1 +1,28 @@
 <h1>Hello</h1>
+<form method="POST" action="/create_account">
+    <label for="uname">User name:</label>
+    <input type="text" id="uname" name="uname">
+    <br>
+    <label for="password">Password:</label>
+    <input type="text" id="password" name="password">
+    <input type="submit" value="Submit">
+</form>
+
+<!-- <script>
+    function createAccount()
+    {
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function()
+        {
+            if(this.readyState == 4 && this.status == 200)
+            {
+                //do anything on the page here since this means it worked
+                console.log("checkou")
+                window.location.replace("/logged_in")
+            }
+        };
+        console.log('confirmed')
+        xhttp.open("POST", "/create_account", true);
+        xhttp.send();
+    }
+</script> -->
