--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -257,3 +257,14 @@ option{
     left: 0;
   }
 }
+.popup{
+  position: absolute;
+  background-color: #2D3540;
+  width: 100%;
+  height: 100vh;
+  padding-top: 30vh;
+  text-align: center;
+  input{
+    background-color: #E5E5E5;
+  }
+}
