--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -54,7 +54,7 @@
 }
 
 main{
-  background-image: url("background.png");
+  background-image: url("trees-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
