--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -12,12 +12,21 @@
 
   --font-body: 'Open Sans', sans-serif;
   --text-body: 12.5px;
+  --semibold-text: 600;
+
   --round-border: 5px;
   --rounder-border: 10px;
+
+  --button-margin: 20px;
+  --button-padding-vertical: 12px;
+  --button-padding-horizontal: 30px;
+
+  --transition-time: 500ms;
 }
 
 .App {
-  text-align: center;
+    font-family: var(--font-body);
+    text-align: center;
 }
 
 .App-logo {
@@ -132,8 +141,28 @@ a{
 
 button{
   border: none;
-  border-radius: 5px;
+  border-radius: var(--round-border);
+  margin: var(--button-margin);
+  padding: var(--button-padding-vertical) var(--button-padding-horizontal);
+  font-family: var(--font-body);
+  font-size: 16px;
+  font-weight: var(--semibold-text);
   cursor: pointer;
+}
+button[type=default] {
+    color: var(--light-color);
+    background-color: var(--secondary-color);
+}
+button[type=outlined] {
+    color: var(--light-color);
+    border: 1.5px solid var(--light-color);
+    background-color: transparent;
+}
+button[type=outlined]:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+:hover {
+    transition: all var(--transition-time) ease;
 }
 
 .loginBox{
