finally fixed login issue with user id 'unknown' and added delete and edit functionality to dashboard

--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -260,9 +260,9 @@ option{
 .popup{
   position: absolute;
   background-color: #2D3540;
-  width: 100%;
-  height: 100vh;
-  padding-top: 30vh;
+  width: 60vw;
+  margin: 20vw;
+  padding: 20vh 0vh;
   text-align: center;
   input{
     background-color: #E5E5E5;
