Fixed add and delete tag

--- a/backend/views/test.html
+++ b/backend/views/test.html
@@ -103,6 +103,25 @@
     <br/>
     <input type="submit" value="Submit">
 </form>
+
+<form method="POST" action="/api/create_tag/6135a92fe249813cecb9c961/613ef8af9d8f2b4180e94c4e">
+    <label for="id">Text:</label>
+    <input type="text" id="text" name="text">
+    <br/>
+    <label for="id">Colour:</label>
+    <input type="text" id="colour" name="colour">
+    <br/>
+    <label for="id">Common Interest:</label>
+    <input type="text" id="isComInterest" name="isComInterest">
+    <br/>
+    <br/>
+    <input type="submit" value="Submit">
+</form>
+
+<form method="POST" action="/api/delete_tag/6135a92fe249813cecb9c961/614a8f7ef752c62fcc16206e">
+    <br/>
+    <input type="submit" value="Submit">
+</form>
 <!-- <script>
     function createAccount()
     {
