--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -1,70 +1,25 @@
 :root{
     // colors
-    --primary-color:#090A0d;
-    --login-color:#171719;
-    --action-color:#3b567c;
-    --dark-color:#c9b9ac;
-    --black-color:#1e1f13;
+    --black-color:#090A0d;
+    --dark-color: #19191f;
     --light-color:#E5E5E5;
-    --secondary-color:#2D3540;
+    --navy-blue:#2D3540;
     --button-color:#556573;
     --highlight-color: #869AA6;
-    --unselected-color:#7a7f81;
+    --grey-color:#7a7f81;
+    --hover-color: rgba(255, 255, 255, 0.1);
 
     --font-body: 'Open Sans', sans-serif;
-    --text-body: 12.5px;
+    --small-text: 12.5px;
     --semibold-text: 600;
     --title-text: 13px;
-
-    --table-height: 75vh;
 
     --round-border: 5px;
     --rounder-border: 10px;
 
-    --button-text-size: 16px;
-    --button-height: 50px;
-    --small-button-height: 37px;
-    --margin: 20px;
-    --padding-vertical: 12px;
-    --padding-horizontal: 30px;
-
     --tag-text-size: 12px;
 
-    --transition-time: 500ms;
-}
-
-.App {
-    font-family: var(--font-body);
-    text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    --transition-time: 600ms;
 }
 
 main{
@@ -74,6 +29,9 @@ main{
   text-align: center;
   overflow: hidden;
   height: 100vh;
+  font-family: var(--font-body);
+  font-size: var(--small-text);
+  color: var(--light-color);
 }
 
 h1{
@@ -91,13 +49,14 @@ h6{
   margin: auto;
 }
 p{
-  font-size: var(--text-body);
+  font-size: var(--small-text);
 }
 
 input{
   font-family: var(--font-body);
   color: var(--light-color);
-  background-color: var(--primary-color);
+  background-color: var(--black-color);
+  border-style: none;
   border-radius: 5px;
 }
 input[type=submit] {
@@ -122,7 +81,7 @@ input[type=submit] {
   cursor: pointer;
 }
 input[type=submit]:hover {
-  background-color: var(--secondary-color);
+  background-color: var(--navy-blue);
 }
 // input:focus{
 //     border:0px;
@@ -133,9 +92,6 @@ label {
   color: var(--light-color);
 }
 
-hr {
-  color: var(--light-color);
-}
 
 a{
   text-decoration: none;
@@ -175,17 +131,12 @@ a{
 }
 
 .inputLabel{
-  left: 0%;
-  right: 0%;
-  top: 1.43%;
-  bottom: 72.86%;
   font-weight: 600;
 }
 
 .inputField{
   font-size: 14px;
   border: 1.75px solid var(--light-color);
-  border-color: var(--light-color);
 
   width: 100%;
   padding: 12px 20px;
@@ -199,7 +150,7 @@ a{
 
 .forgotpword{
   color: var(--highlight-color);
-  font-size: var(--text-body);
+  font-size: var(--small-text);
   margin-top: 0px;
 }
 .forgotpword:hover{
@@ -222,7 +173,7 @@ nav{
 
 .containerDash{
   //margin: 120px 87px;
-  width: 80%;
+  width: var(--table-width);
 }
 
 .actionsBar{
@@ -234,27 +185,21 @@ nav{
   justify-content: space-between;
 }
 
-.dashSearch{
-  border-style: none;
-  background-color: var(--primary-color);
-}
-
 .filterContainer{
   width: 204px;
   text-align: left;
-  background-color: var(--primary-color);
+  background-color: var(--black-color);
   border-radius: 5px;
 }
 .filterForm{
   margin-left: 20px;
 }
 
-.searchForm {
+.searchBox {
     width: 280px;
     border-radius: 5px;
     padding: 5px;
-    color: var(--light-color);
-    background-color: var(--primary-color);
+    background-color: var(--black-color);
     input{
       width: 85%;
     }
@@ -264,57 +209,16 @@ nav{
     }
 }
 select{
-  background-color: var(--primary-color);
-  color: var(--unselected-color);
+  background-color: var(--black-color);
+  color: var(--grey-color);
   border-style: none;
 }
 option{
-  background-color: var(--primary-color);
-  color: var(--unselected-color);
+  background-color: var(--black-color);
+  color: var(--grey-color);
   border-style: none;
 }
 
-//// TABLE
-table{
-  text-align: left;
-  background-color: var(--primary-color);
-  width: 100%;
-  color: var(--light-color);
-  border-collapse: collapse;
-  // border: 0px solid var(--secondary-color);
-  // border-radius: 5px;
-}
-th, td {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.container {
-    border-radius: var(--rounder-border);
-    background-color: var(--primary-color);
-}
-
-.table {
-    height: var(--table-height);
-}
-
-.headerRow{
-  position: static;
-  background-color: var(--secondary-color);
-  color: var(--light-color);
-  height: 40px;
-  border-radius: 5px 5px 0px 0px;
-}
-
-.email{
-  //width: 170px;
-}
-.socials{
-  width: 82px;
-}
-.tags{
-  //width: 190px;
-}
 
 .popup{
   position: absolute;
