--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -9,8 +9,8 @@
     //--hover-color: rgba(255, 255, 255, 0.05);
 
     --font-body: 'Open Sans', sans-serif;
-    --small-text: 12.5px;
-    --title-text: 13px;
+    --small-text-size: 12.5px;
+    --input-text-size: 13px;
     --semibold-text: 600;
 
     --round-border: 5px;
@@ -29,7 +29,7 @@ main{
   overflow: hidden;
   height: 100vh;
   font-family: var(--font-body);
-  font-size: var(--small-text);
+  font-size: var(--small-text-size);
   color: var(--light-color);
 }
 
@@ -43,12 +43,12 @@ h1{
 
 // for column headings
 h6{
-  font-size: var(--title-text);
+  font-size: var(--input-text-size);
   font-weight: bold;
   margin: auto;
 }
 p{
-  font-size: var(--small-text);
+  font-size: var(--small-text-size);
 }
 
 input{
@@ -134,7 +134,7 @@ a{
 }
 
 .inputField{
-  font-size: var(--title-text);
+  font-size: var(--input-text-size);
   border: 1.75px solid var(--light-color);
 
   width: 100%;
@@ -149,7 +149,7 @@ a{
 
 .forgotpword{
   color: var(--highlight-blue);
-  font-size: var(--small-text);
+  font-size: var(--small-text-size);
   margin-top: 0px;
 }
 .forgotpword:hover{
@@ -170,8 +170,7 @@ nav{
     float: right;
 }
 
-.containerDash{
-  //margin: 120px 87px;
+.page-content{
   width: var(--table-width);
 }
 
@@ -208,14 +207,14 @@ nav{
     }
 }
 select{
-  background-color: var(--black-color);
-  color: var(--grey-color);
-  border-style: none;
+    background-color: var(--black-color);
+    color: var(--grey-color);
+    border-style: none;
 }
 option{
-  background-color: var(--black-color);
-  color: var(--grey-color);
-  border-style: none;
+    background-color: var(--black-color);
+    color: var(--grey-color);
+    border-style: none;
 }
 
 
@@ -233,4 +232,26 @@ option{
 
 :hover {
     transition: all var(--transition-time) ease;
+}
+
+.contact-header, .contact-info-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.contact-header {
+    align-items: center;
+}
+.contact-info-container {
+    align-items: flex-start;
+}
+
+.contact-form {
+    font-size: var(--input-text-size);
+    text-align: left;
+}
+
+.outlined {
+    border: 1.5px solid var(--light-color);
+    background-color: transparent;
 }
